# version 0.62
28/02/2019
   - Removed old VC controllers and updated tests (margaretha, issue #34)
   - Updated VC access controllers (margaretha)
19/03/2019
  - Added close index controller (margaretha)
11/04/2019
   - Fixed unknown authentication scheme, missing VC entity, and parameter 
     checker (margaretha)

# version 0.61.6
04/02/2019
   - Fixed SQL data and merged oauth2_client_url and oauth2_client (margaretha)
   - Updated client deregistration behavior (margaretha)
05/02/2019
   - Added delete-group-by-name controller (margaretha)
   - Added unique index to group name (margaretha)
06/02/2019
   - Updated a user setting test using array for multiple values (margaretha)
   - Added metadata controller tests (margaretha)
18/02/2019
   - Fixed tests (margaretha)
   - Updated handling errors from Koral (margaretha)
19/02/2019
   - Added fields to metadata controller (margaretha, issue #39)

# version 0.61.5
17/12/2018
   - Added a search timeout test (margaretha)
18/12/2018
   - Updated tests using BeanConfigTest to use SpringJerseyTest (margaretha)
08/01/2019
   - Improved predefined vc caching (issue #28, margaretha)
09/01/2019
   - Added comments (margaretha)
   - Updated code structure (margaretha)
11/01/2019
   - Degraded API version to 1.0 (margaretha)
   - Added OAuth2 client info tests (margaretha)
14/01/2019
   - Added retrieveVCByName and deleteVCByName controllers (margaretha)
16/01/2019
   - Added a PUT request for both creating and editing vc (margaretha)
   - Added aliases to some VC controllers (margaretha)
   - Merged VC access list controllers (margaretha)
21/01/2019
   - Removed codes related to user registration & password management (margaretha)  
22/01/2019
   - Added create, edit, retrieve user default setting controllers (margaretha)
22/01/2019
   - Updated default setting controllers & added tests (margaretha)
   - Added delete key in setting controllers (margaretha)
23/01/2019
   - Added default setting key validation (margaretha)